set(STREAM_LIBRARY_TYPE SHARED)

set(STREAM_PUBLIC_HEADERS
)

set(STREAM_SOURCES
    stream.c
)

set(STREAM_PRIVATE_INCLUDE_DIRECTORIES
    "${CMAKE_BINARY_DIR}"
    "${GLIB_INCLUDE_DIRS}"
    "${FORWARDING_HEADERS_DIR}"
    "${PURC_DIR}"
    "${PurC_DERIVED_SOURCES_DIR}"
    "${PURC_DIR}/include"
)

set(STREAM_LIBRARIES
    ${CMAKE_DL_LIBS}
)

link_directories (${CMAKE_BINARY_DIR}/Source/PurC)
list(APPEND STREAM_LIBRARIES PurC::PurC)

PURC_FRAMEWORK_DECLARE(STREAM)

set_target_properties(STREAM PROPERTIES OUTPUT_NAME "purc-dvobj-STREAM")

PURC_WRAP_SOURCELIST(${STREAM_SOURCES})
PURC_FRAMEWORK(STREAM)

install(TARGETS STREAM DESTINATION "${LIB_INSTALL_DIR}/purc-${PURC_API_VERSION}")

if (MSVC)
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
endif ()
